adapted layout for tablet and large desktop

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,8 +1,14 @@
+@import '../../utils/mixins.scss';
+
 .menu {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   gap: 8px;
-  padding-inline: 69px;
   height: fit-content;
+  width: 100%;
+
+  @include onLargeDesktop {
+    gap: 16px;
+  }
 }
