--- a/src/components/OptionButton/OptionButton.scss
+++ b/src/components/OptionButton/OptionButton.scss
@@ -6,8 +6,7 @@
   display: flex;
   align-items: center;
   padding-inline: 31px;
-  width: 373px;
-  height: 72px;
+  aspect-ratio: 5.18 / 1;
 
   background-image: url("../../../public/img/desktop/option-basic.png");
   background-color: transparent;
@@ -69,6 +68,16 @@
     font-size: 20px;
     line-height: 23px;
 
+    @include onLargeDesktop {
+      font-size: 40px;
+      line-height: 46px;
+    }
+
+    @include onTablet {
+      font-size: 14px;
+      line-height: 16px;
+    }
+
     @include onPhone {
       font-size: 14px;
       line-height: 16px;
@@ -83,6 +92,10 @@
       margin-left: 8px;
       font-weight: 400;
       color: $color-blue;
+
+      @include onLargeDesktop {
+        margin-left: 20px;
+      }
     }
   }
 
