--- a/src/utils/colors.scss
+++ b/src/utils/colors.scss
@@ -1,12 +1,12 @@
-$color-black: #1C1C21;
-$medium-grey: #D0D0D8;
-$light-grey: #F5F5F7;
-$color-white: #FFFFFF;
-$dark-blue: #003B63;
-$medium-dark-blue: #004974;
-$medium-blue: #1E6A8E;
-$color-blue: #3891B1;
-$bright-green: #47D867;
-$bright-orange: #FF8B37;
-$bright-red: #EC6259;
-$light-red: #FDEEED;
+$primary-black: #1C1C21;
+$primary-inactive: #D0D0D8;
+$primary-game-bg: #F5F5F7;
+$primary-white: #FFFFFF;
+$primary-btn-active: #003B63;
+$primary-hover: #004974;
+$primary-btn: #1E6A8E;
+$primary-text: #3891B1;
+$text-correct: #47D867;
+$text-selected: #FF8B37;
+$text-wrong: #EC6259;
+$secondary-btn-text: #FDEEED;
