--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -13,7 +13,7 @@
     padding-block: 133px 122px;
     padding-left: 80px;
     width: 73.85%;
-    background-color: $light-grey;
+    background-color: $primary-game-bg;
 
     @include onLargeDesktop {
       padding-block: 200px 184px;
@@ -98,7 +98,7 @@
       padding: 16px 16px 32px;
       width: 100%;
       height: 100%;
-      background-color: $light-grey;
+      background-color: $primary-game-bg;
 
       &:target {
         display: flex;
